[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/screens/ScreenGame.gd" type="Script" id=3]
[ext_resource path="res://scenes/screens/Screen.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/InfoPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sounds/bgm2.mp3" type="AudioStream" id=7]

[node name="ScreenGame" instance=ExtResource( 4 )]
script = ExtResource( 3 )

[node name="ToolButton" type="ToolButton" parent="." index="0"]
margin_left = -6000.0
margin_top = -6000.0
margin_right = 6000.0
margin_bottom = 6000.0

[node name="Navigation2D" type="Navigation2D" parent="." index="1"]

[node name="Map" parent="Navigation2D" index="0" instance=ExtResource( 1 )]
world_gen_enable = true

[node name="Player" parent="Navigation2D/Map" index="6" instance=ExtResource( 6 )]
position = Vector2( 520, 481 )

[node name="UI" parent="." index="2" instance=ExtResource( 2 )]

[node name="InfoPanel" parent="." index="3" instance=ExtResource( 5 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource( 7 )
bus = "Music"

[node name="ModalButton" type="ToolButton" parent="." index="5"]
visible = false
margin_left = -6000.0
margin_top = -6000.0
margin_right = 6000.0
margin_bottom = 6000.0

[connection signal="hover_end_tower" from="." to="InfoPanel" method="_on_World_hover_end_tower"]
[connection signal="hover_start_tower" from="." to="InfoPanel" method="_on_World_hover_start_tower"]
[connection signal="select_tower" from="." to="InfoPanel" method="_on_World_select_tower"]
[connection signal="unselect_tower" from="." to="InfoPanel" method="_on_World_unselect_tower"]
[connection signal="player_inventory_changed" from="Navigation2D/Map/Player" to="UI" method="_on_Player_player_inventory_changed"]
[connection signal="pressed" from="ModalButton" to="." method="_on_ModalButton_pressed"]
